Object/objects/Apttus_Config2__AttributeValueMatrixEntry__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Materials</fullName>
                </value>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>New Support Package</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Stream_Sub_Type__c</fullName>
        <label>Revenue Stream Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Cyber Security</fullName>
                </value>
                <value>
                    <fullName>Integration Services</fullName>
                </value>
                <value>
                    <fullName>New Logo</fullName>
                </value>
                <value>
                    <fullName>Organizational Change Management</fullName>
                </value>
                <value>
                    <fullName>Reporting Services</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Partner Lead Services</fullName>
                </value>
                <value>
                    <fullName>Partner Subcontract Services</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Stream_Type__c</fullName>
        <label>Revenue Stream Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Licenses</fullName>
                </value>
                <value>
                    <fullName>Additional Licenses/Services</fullName>
                </value>
                <value>
                    <fullName>Adoption Services</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Customer Funded Development</fullName>
                </value>
                <value>
                    <fullName>Delivery Services</fullName>
                </value>
                <value>
                    <fullName>Extension (+1 or +2 option)</fullName>
                </value>
                <value>
                    <fullName>Extension (other)</fullName>
                </value>
                <value>
                    <fullName>Facilities Management</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Integration &amp; Reporting Services</fullName>
                </value>
                <value>
                    <fullName>IT Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Mix of Options</fullName>
                </value>
                <value>
                    <fullName>Net New Service</fullName>
                </value>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>Partner Services</fullName>
                </value>
                <value>
                    <fullName>Product Optimization Package</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Support Packages</fullName>
                </value>
                <value>
                    <fullName>Training Services</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Stream__c</fullName>
        <label>Revenue Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Licenses</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>